!Fixed module permissions for reflections while running tests.